<resources>
    <string name="app_name">OneKey</string>

    <string name="nav_drawer_open" translatable="false">open drawer</string>
    <string name="nav_drawer_close" translatable="false">close drawer</string>

    <!--create unlock pattern start-->
    <string name="title_set_unlock_pattern">Set password</string>
    <string name="tips_draw_pattern">Please draw pattern,connect at least 4 points</string>
    <string name="tips_draw_down">Release finger when done</string>
    <string name="tips_error_draw_less">Connect at leaset 4 points.Please try again</string>
    <string name="tips_draw_again">Please draw the unlock pattern again</string>
    <string name="tip_error_draw_wrong">The two patterns do not match.Please try again</string>
    <string name="skip">Skip</string>
    <string name="reset">Reset</string>
    <!--create unlock pattern end-->

    <!--login in start-->
    <string name="tips_login">Enter Fingerprint or Draw Pattern</string>
    <string name="title_draw_pattern">Draw Pattern</string>
    <string name="tips_fingerprint_error1_retry">Try again</string>
    <string name="tips_fingerprint_error2_wrong">Cannot recognize your fingerprint</string>
    <string name="tips_fingerprint_error3_disable">Your pattern is required to enable Fingerprint recognize</string>
    <!--login in end-->


    <!-- start page -->
    <string name="tips_start_draw_key">Please start draw key</string>
    <string name="tips_create_lock_key">Please Create Lock Key</string>
    <string name="tips_set_draw_secret">Please Set Draw Secret</string>
    <string name="tips_draw_the_key_again">Please Draw The Key Again</string>
    <string name="tips_incorrect_redraw">The key not euqal to the last one, Please redraw!</string>
    <string name="tips_invalid_redraw">The key should more than 4 dot, Please redraw!</string>
    <string name="go_to_login">Goto login</string>
    <string name="tips_draw_key_correct">Draw the right pattern}</string>
    <string name="tips_draw_key_wrong">Draw the wrong pattern, try again</string>

    <!-- category res-->
    <string name="category_email">Email Account</string>
    <string name="category_note">Secret Notes</string>
    <string name="category_website">Web Account</string>
    <string name="category_game">Game Account</string>
    <string name="category_chat">Chat Account</string>
    <string name="category_bank">Bank Account</string>
    <string name="category_bus">Trans. Account</string>
    <string name="category_shopping">Shopping Account</string>
    <string name="category_book">Reading Account</string>
    <string name="category_money">Money Account</string>
    <string name="category_home">Home Account</string>
    <string name="category_wallet">Credit Account</string>
    <string name="category_map">Map Account</string>
    <string name="category_health">Health Account</string>
    <string name="category_sport">Sport Account</string>
    <string name="category_video">Video Account</string>
    <string name="category_media">Media Account</string>
    <string name="category_tools">Tools Account</string>
    <string name="category_company">company Account</string>
    <string name="category_others">Others Account</string>
    <!-- category res end-->

    <!-- create account-->
    <string name="create_title_hint">Title</string>
    <string name="create_account">Account</string>
    <string name="create_password">Password</string>
    <string name="create_hint">Click to enter</string>
    <string name="create_comment_hint">Comment</string>
    <string name="create_save">Save</string>
    <string name="exceed_length_tip">The input text has exceeded 32 letter</string>
    <string name="not_complete_tip">The input can not be empty</string>
    <string name="welcome">Welcome</string>
    <string name="draw_key">Draw Key</string>
    <!-- create account end -->

    <!-- account ops-->
    <string name="account_del">Delete</string>
    <string name="account_mod">Modify</string>
    <string name="account_del_confirm">Confirm delete</string>
    <string name="category_click_tips">Long press [Category] to create responded account</string>
    <!-- account ops end-->

    <!-- category create -->
    <string name="create_category_hint">Pleate input category name</string>
    <!-- category create end-->

    <!-- main page -->
    <string name="copy_success">has been copied into clipboard</string>
    <!-- main page end-->

    <!-- prefernce page-->
    <string name="login_setting">Login Setting</string>
    <string name="change_secret">Change Secret</string>
    <string name="random_keyboard">Random Keyboard</string>
    <string name="fingerprint">Fingerprint</string>

    <string name="secure_setting">Secure Setting</string>
    <string name="login_record">Login Record</string>

    <string name="account_binding">Account Binding</string>
    <string name="weixin">Weixin</string>
    <string name="phone">Phone Number</string>

    <string name="data_backup">Data Backup</string>
    <string name="backup">Backup data into cloud</string>
    <string name="restore">Restore data from cloud</string>
    <string name="send">Send data into mail box</string>

    <string name="about">About</string>
    <string name="vip">Pro. feature</string>
    <string name="feedback">Advice Feedback</string>
    <string name="version">Version</string>
    <string name="copyright">©Copyright Onekey LLC</string>

    <!-- prefernce page end-->
    <!-- title -->
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="account">Create Account</string>
    <string name="modify">Modify Account</string>
    <string name="category">Create Category</string>
    <!-- title end-->


    <!-- for widget pattern lock-->
    <string name="lib_name">PatternLockView</string>
    <string name="message_pattern_cleared">Pattern cleared</string>
    <string name="message_pattern_detected">Pattern drawing completed</string>
    <string name="message_pattern_dot_added">Dot added to pattern</string>
    <string name="message_pattern_started">Pattern drawing started</string>
    <!-- for widget pattern lock-->
</resources>

