<?xml version="1.0" encoding="utf-8"?><!--
  ~ /* ******************************* Copyright (c)*********************************\
  ~  **
  ~  ** (c) Copyright 2018,VinsonZhan, china, wuhan
  ~  ** All Rights Reserved
  ~  **
  ~  ** By( The OneKey Project)
  ~  **
  ~  *********************************版本信息*******************************
  ~  ** 版 本: V0.1
  ~  ***********************************************************************
  ~  ********************************End of Head************************************\
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <LinearLayout
        android:id="@+id/category_selector"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:popupBackground="@color/white"
            android:spinnerMode="dropdown" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/category_creator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg" />
    </LinearLayout>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/category_selector"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_exittext"
        android:cursorVisible="true"
        android:hint="@string/create_title_hint"
        android:maxLength="@integer/max_letter"
        android:maxLines="1"
        android:paddingStart="32dp"
        android:paddingEnd="16dp"
        android:textSize="@dimen/middle_title" />

    <LinearLayout
        android:id="@+id/create_account_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/create_title"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/create_account"
            android:textSize="@dimen/middle_content" />

        <EditText
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_exittext"
            android:cursorVisible="true"
            android:gravity="end|center_vertical"
            android:hint="@string/create_hint"
            android:maxLength="@integer/max_letter"
            android:maxLines="1"
            android:textSize="@dimen/middle_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/create_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/create_account_container"
        android:background="@color/bg_gray"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/create_password_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/create_divider"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/create_password"
            android:textSize="@dimen/middle_content" />

        <EditText
            android:id="@+id/create_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_exittext"
            android:cursorVisible="true"
            android:gravity="end|center_vertical"
            android:hint="@string/create_hint"
            android:inputType="textPassword"
            android:maxLength="@integer/max_letter"
            android:maxLines="1"
            android:textSize="@dimen/middle_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/create_comment"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_below="@id/create_password_container"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_exittext"
        android:cursorVisible="false"
        android:hint="@string/create_comment_hint"
        android:padding="16dp" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/create_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/create_comment"
        android:text="@string/create_save"
        android:textSize="@dimen/middle_title"
        app:bootstrapBrand="warning" />
</RelativeLayout>